--- a/src/stylesheets/lista.css
+++ b/src/stylesheets/lista.css
@@ -1,3 +1,4 @@
+
 .contenedor-lista{
     display: flex;
     flex-direction: row;
@@ -26,4 +27,19 @@
     width: 45%;
     display: flex;
     border-left: 2px solid #3AA8C1;
+}
+@media (max-width:1000px) {
+    .contenedor-lista {
+        height: 100%;
+        flex-direction: column;
+    }
+    .contenedor-lista-form {
+        width: 100%;
+        height: 50%;
+    }
+    .mapa-contenedor {
+        border-left: none;
+        width: 100%;
+        height: 50%;
+    }
 }
